Make JwtTokenProvider work with application.props

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 server.servlet.contextPath=/api
 server.port=8080
+jwt.secret=BeagleWorld!!!1
 
 #mongodb
 spring.data.mongodb.uri=mongodb://localhost:27017/dogs
